Use find_package process rather than pkg_search_module for Minizip, set quiet to superbuild find_packages, remove explicitly minizip links for Apple

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,15 +158,14 @@ ExternalProject_Add(miniziplib PREFIX "${CMAKE_BINARY_DIR}/minizip"
 	CMAKE_ARGS ${APP_OPTIONS} ${USER_ARGS} -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR> -DCMAKE_PREFIX_PATH=${PREFIX_PATH}
 )
 include(FindPkgConfig)
-find_package(LinphoneCxx CONFIG)
-find_package(Linphone CONFIG)
-find_package(bctoolbox CONFIG)
-find_package(belcard CONFIG)
-find_package(Mediastreamer2 CONFIG)
-find_package(ortp CONFIG)
-set(ENV{PKG_CONFIG_PATH} "${MINIZIP_OUTPUT_DIR}/${CMAKE_INSTALL_LIBDIR}/pkgconfig")
+find_package(LinphoneCxx CONFIG QUIET)
+find_package(Linphone CONFIG QUIET)
+find_package(bctoolbox CONFIG QUIET)
+find_package(belcard CONFIG QUIET)
+find_package(Mediastreamer2 CONFIG QUIET)
+find_package(ortp CONFIG QUIET)
+find_package(minizip QUIET)
 
-pkg_search_module(MINIZIP minizip NO_CMAKE_ENVIRONMENT_PATH)
 if(ENABLE_BUILD_VERBOSE)
 	message("MINIZIP from superbuild :${MINIZIP_PREFIX}, ${MINIZIP_INCLUDE_DIRS} => ${MINIZIP_LIBRARIES}")
 endif()
