--- a/.gitlab-ci-files/job-windows-desktop.yml
+++ b/.gitlab-ci-files/job-windows-desktop.yml
@@ -113,6 +113,8 @@ job-windows-vs2017-package:
     variables:
       - $NIGHTLY_MASTER
       - $PACKAGE_RUN_WINDOWS
+  variables:
+      CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
   script:
     - SET Qt5_DIR=C:\Qt\5.12.6\msvc2017\lib\cmake
     - SET PATH=%PATH%;C:\Qt\5.12.6\msvc2017\bin
