--- a/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
+++ b/linphone-app/cmake_builder/linphone_package/packaging.cmake.in
@@ -24,6 +24,7 @@ set(DO_TZ @CPACK_BINARY_TZ@)
 set(DO_STGZ @CPACK_BINARY_STGZ@)
 set(DO_DRAGNDROP @CPACK_BINARY_DRAGNDROP@)
 set(DO_GENERATOR @DO_GENERATOR@)
+set(DO_APPIMAGE @DO_APPIMAGE@)
 
 
 if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
@@ -55,6 +56,12 @@ if (NOT "${CMAKE_INSTALL_PREFIX}" MATCHES .*/_CPack_Packages/.*)
     execute_process( COMMAND ${CMAKE_CPACK_COMMAND} -G @CPACK_GENERATOR@ RESULT_VARIABLE CPACK_COMMAND_RESULT)
     if(CPACK_COMMAND_RESULT)
       message(FATAL_ERROR "Failed to create @CPACK_GENERATOR@ package!")
+    endif()
+  endif()
+  if(DO_APPIMAGE)
+    execute_process( COMMAND "@CMAKE_BINARY_DIR@/../create_appimage.sh" RESULT_VARIABLE CPACK_COMMAND_RESULT)
+    if(CPACK_COMMAND_RESULT)
+      message(FATAL_ERROR "Failed to create AppImage package with this command : @CMAKE_BINARY_DIR@/../create_appimage.sh\nMaybe the .appimage already exists and is running. Please remove the file before packaging if it is the case.")
     endif()
   endif()
   if (@PERFORM_SIGNING@)
