--- a/.gitlab-ci-files/job-linux-desktop-debian10.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian10.yml
@@ -76,9 +76,9 @@ job-debian10-ninja-clang:
   only:
     variables:
       - $NIGHTLY_MASTER
+      - $PACKAGE_RUN_LINUX
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
   variables:
-    CMAKE_OPTIONS: -DENABLE_DOC=ON
     CMAKE_GENERATOR: Ninja
     CC: clang
     CXX: clang++
@@ -93,8 +93,45 @@ job-debian10-ninja-clang-novideo:
     CMAKE_OPTIONS: -DENABLE_VIDEO=NO
   extends: job-debian10-ninja-clang
   
+
 #################################################
-# TESTS
+# Package - Nightly
 #################################################
+
+job-debian10-makefile-clang-package:
+  stage: package
+  tags: [ "docker-debian10" ]
+  dependencies:
+    - job-debian10-makefile-clang
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $PACKAGE_RUN_LINUX
+  variables:
+    CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
+  extends: job-debian10-makefile-clang
+  script:
+    - *build_all_script    
+  artifacts:
+    paths:
+      - build/OUTPUT/Packages/Linphone*.AppImage
+    expire_in: 1 week
+
+#################################################
+# Deploy - Nightly
+#################################################
+
+job-debian10-makefile-clang-deploy:
+  stage: deploy
+  tags: [ "docker-debian10" ]
+  dependencies:
+    - job-debian10-makefile-clang-package
+  only:
+     variables:
+       - $NIGHTLY_MASTER
+       - $DEPLOY_RUN_LINUX
+  script:
+    - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
+
 
 
