--- a/.gitlab-ci-files/job-linux-desktop-debian10.yml
+++ b/.gitlab-ci-files/job-linux-desktop-debian10.yml
@@ -25,6 +25,7 @@ job-debian10-makefile-clang:
   only:
     variables:
       - $NIGHTLY_MASTER
+      - $PACKAGE
   variables:
     CMAKE_GENERATOR: Unix Makefiles
     CC: clang
@@ -76,7 +77,6 @@ job-debian10-ninja-clang:
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $PACKAGE_RUN_LINUX
   image: gitlab.linphone.org:4567/bc/public/linphone-sdk/bc-dev-debian:10
   variables:
     CMAKE_GENERATOR: Ninja
@@ -106,7 +106,7 @@ job-debian10-makefile-clang-package:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $PACKAGE_RUN_LINUX
+       - $PACKAGE
   variables:
     CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
   extends: job-debian10-makefile-clang
@@ -129,7 +129,7 @@ job-debian10-makefile-clang-deploy:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $DEPLOY_RUN_LINUX
+       - $DEPLOY
   script:
     - scp build/OUTPUT/Packages/Linphone*.AppImage $DEPLOY_SERVER:$APPIMAGE_UPLOAD_DIRECTORY/
 
