--- a/.gitlab-ci-files/job-macosx-desktop.yml
+++ b/.gitlab-ci-files/job-macosx-desktop.yml
@@ -22,6 +22,9 @@
 .job-macosx-desktop:
   stage: build
   tags: [ "macosx" ]
+  except:
+    variables:
+      - $NOT_MACOSX
   script:
     - *build_all_script
   artifacts:
@@ -46,7 +49,7 @@ job-macosx-makefile:
   only:
     variables:
       - $NIGHTLY_MASTER
-      - $PACKAGE_RUN_MACOS
+      - $PACKAGE
   variables:
     CMAKE_GENERATOR: Unix Makefiles
     ADDITIONAL_BUILD_OPTIONS: -j$MAKEFILE_JOBS
@@ -84,7 +87,7 @@ job-macosx-makefile-package:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $PACKAGE_RUN_MACOS
+       - $PACKAGE
   variables:
     CMAKE_OPTIONS: -DENABLE_APP_PACKAGING=YES
   extends: job-macosx-makefile
@@ -108,6 +111,6 @@ job-macosx-makefile-deploy:
   only:
      variables:
        - $NIGHTLY_MASTER
-       - $DEPLOY_RUN_MACOS
+       - $DEPLOY
   script:
     - scp build/OUTPUT/Packages/Linphone*.dmg $DEPLOY_SERVER:$MACOSX_UPLOAD_DIRECTORY/app/
