Test CI with conditional [ci skip]

--- a/.gitlab-ci-files/job-linux-desktop.yml
+++ b/.gitlab-ci-files/job-linux-desktop.yml
@@ -3,12 +3,11 @@
 #################################################
 
 .job-linux-desktop:
-
   stage: build
   extends: .linux-prepare
-  except:
+  only:
     variables:
-      - $NOT_LINUX
+      - $BUILD_LINUX
   script:
     - cmake --version
     - export CC=$CC
